# Qwen3-ASR-SFT_unsupervised_Projects

./: CODE_READING_GUIDE_CN.md  MANIFEST.in  QWEN3_ASR_CALLCHAIN_STUDY_GUIDE_CN.md  QWEN3_ASR_STREAMING_CALLCHAIN_REPORT_CN.md  QWEN3_ASR_STREAMING_TECH_REPORT_CN.md  QWEN3_ASR_VLLM_BACKEND_STUDY_AND_API_SUMMARY_CN.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
docker/: Dockerfile-qwen3-asr-cu128
examples/: example_qwen3_asr_transformers.py  example_qwen3_asr_vllm.py  example_qwen3_asr_vllm_streaming.py  example_qwen3_forced_aligner.py
finetuning/: QWEN3_ASR_FINETUNING_DEEP_DIVE_CN.md  WUHAN_FINETUNING_PIPELINE.md  asr_data_utils.py  generate_pseudo_labels.py  prepare_asr_jsonl.py  qwen3_asr_sft.py  qwen3_asr_sft_semisup.py
local_web/: README.md  build_qwen3_asr_image.ps1  index.html  qwen3_asr_gateway.html  qwen3_asr_gateway.py  qwen3_streaming_launcher.py  qwen3_streaming_stable_server.py  start_local_web.ps1  start_qwen3_asr_gateway.ps1  start_qwen3_asr_server.ps1  start_qwen3_asr_streaming.ps1
qwen_asr/: __init__.py  __main__.py
qwen_asr/cli/: demo.py  demo_streaming.py  serve.py
qwen_asr/core/transformers_backend/: __init__.py  configuration_qwen3_asr.py  modeling_qwen3_asr.py  processing_qwen3_asr.py
qwen_asr/core/vllm_backend/: __init__.py  qwen3_asr.py
qwen_asr/inference/: qwen3_asr.py  qwen3_forced_aligner.py  utils.py
